--- a/upgrades/brownie-config.yaml
+++ b/upgrades/brownie-config.yaml
@@ -17,7 +17,7 @@ networks:
   development:
     verify: False
   rinkeby:
-    verify: False
+    verify: True
   ganache:
     verify: False
 wallets:
